# German-Accounting

./: .eslintrc.cjs  .prettierignore  package-lock.json  package.json  pyproject.toml  ruff.toml
german_accounting/: __init__.py  hooks.py  patches.txt
german_accounting/events/: add_outstanding_amount.py  credit_limit_check.py  extended_tax_category.py  invoice_amounts.py  quotation_credit_limit_check.py  sales_invoice_validation.py  sales_order_amount.py  sales_order_credit_limit_check.py  update_amounts_value.py  update_invoice_amounts.py
german_accounting/fixtures/: property_setter.json  role.json  translation.json
german_accounting/german_accounting/doctype/datev_action_panel/: datev_action_panel.js  datev_action_panel.json  datev_action_panel.py  test_datev_action_panel.py
german_accounting/overrides/: __init__.py  custom_customer.py
german_accounting/overrides/delivery_note/: custom_delivery_note.py
german_accounting/overrides/journal_entry/: custom_journal_entry.py
german_accounting/overrides/sales_invoice/: custom_sales_invoice.py
german_accounting/overrides/sales_order/: custom_sales_order.py
german_accounting/patches/v13_0/: delete_report_datev_sales_invoice.py  remove_datev_mapping_related_doctypes.py  remove_imat_workspace.py
german_accounting/public/html/: datev_sales_invoice_export.html  print_template.html
german_accounting/public/js/: banner_utils.js  customer.js  item_group.js  sales_invoice.js
german_accounting/public/js/banner/: customer_banner.js  (+2 more)
german_accounting/setup/: install.py
german_accounting/translations/: de.csv
(+19 files in other folders)
